# rustcn

./: Cargo.toml  Dioxus.toml  README.md
assets/: tailwind.css
public/: tailwind.css
src/: about.rs  app.rs  home.rs  main.rs
src/components/: alert.rs  alert_dialog.rs  button.rs  form.rs  input.rs  mod.rs  textarea.rs
src/pages/: about.rs  home.rs  mod.rs  page_not_found.rs
