[package]
name = "rustcn"
version = "0.1.0"
authors = ["Bill McCann <bill.mccann@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
manganis = "0.2.2"

dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-web = "0.5"
web-sys = "0.3.55"

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
